
[metadata]
name = wireguard_tools
version =  attr: wireguard_tools.__version__
description = "configure, deploy, and manage a wireguard vpn network"
long_description = README.rst
author = "Matt Krueger"
author_email = 'mkrueger@rstms.net'
license = "MIT license"
keywords = 'wireguard_tools'
url='https://github.com/rstms/wireguard_tools'
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
  pip>=21.3.1
  wheel>=0.37.0
  setuptools>=59.2.0

[options.extras_require]
dev =
  bump2version==1.0.1
  watchdog==2.1.6
  argh==0.26.2
  flake8==4.0.1
  coverage==6.1.2
  Sphinx==4.3.0
  isort==5.10.1
  twine==3.6.0
  tox==3.24.4
  black==21.11b1
  pytest==6.2.5

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:wireguard_tools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88
extend-ignore = E203

[isort]
profile=black
[tool:pytest]
collect_ignore = ['setup.py']
[options.entry_points]
console_scripts = 
  wgconfig = wireguard_tools.cli:main
